adaptar formulario a moviles
terminado el cambio de imagen dependiendo del tipo de pantalla

--- a/style.css
+++ b/style.css
@@ -203,17 +203,19 @@ img {
 }
 
 /* CONTACTO */
-@media (min-width: 768px) {
-    .contacto-bg{
-        background-image: url(/img/im4.jpg);
-    }
-}
+
 
 .contacto-bg{
     background-image: url(/img/img7.jpg);
     height: 40rem;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+@media (min-width: 768px) {
+    .contacto-bg{
+        background-image: url(/img/img4.jpg);
+    }
 }
 
 /* FORMULARIO */
