cambios importantes indext y nosotros
quitamos precios pagina princpal, eliminamos nosotros en pagina nosotros

--- a/style.css
+++ b/style.css
@@ -288,3 +288,13 @@ img {
 iframe{
     max-width: 95%;
 }
+
+.iconoRRSS{
+    max-width: 10rem;
+    padding: 2rem;
+}
+
+.widget-curso__label-rrss{
+    display: flex;
+    justify-content: space-between;
+}
